k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediabase
spec:
  selector:
    app: mediabase
  ports:
    - name: http
      port: 8095
      targetPort: http
    - name: grpc
      port: 8096
      targetPort: grpc
